--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "astro-icon": "^1.1.1",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "node-html-parser": "^6.1.13",
     "unpic": "^3.18.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@eslint/js": "^9.12.0",
     "@iconify-json/flat-color-icons": "^1.2.0",
     "@iconify-json/tabler": "^1.2.5",
+    "@jasikpark/astro-svg-loader": "^0.3.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/eslint__js": "^8.42.3",
     "@types/js-yaml": "^4.0.9",
