--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,22 +1,22 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: Onpage.AI
+  site: 'https://onpage.ai'
   base: '/'
-  trailingSlash: false
+  trailingSlash: true
 
   googleSiteVerificationId: orcPxI47GSa-cRvY11tUe6iGg2IO_RPvnA1q95iEM3M
 
 # Default SEO metadata
 metadata:
   title:
-    default: AstroWind
-    template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+    default: Onpage.ai
+    template: '%s — Onpage AI'
+  description: "\U0001F680 Onpage.ai SEO Chrome Extension for SEO Content Creation & Competitive Analysis."
   robots:
     index: true
     follow: true
   openGraph:
-    site_name: AstroWind
+    site_name: Onpage.ai
     images:
       - url: '~/assets/images/default.png'
         width: 1200
